--- a/docker/node/Dockerfile
+++ b/docker/node/Dockerfile
@@ -1,5 +1,3 @@
-# FIXME: tutum/debian will be deprecated soon: https://github.com/tutumcloud/tutum-debian/blob/master/README.md
-# FROM ubuntu:16.04
 FROM ceph/daemon:tag-build-master-jewel-ubuntu-16.04
 
 # Install packages
@@ -17,6 +15,4 @@ ENV AUTHORIZED_KEYS **None**
 
 EXPOSE 22
 
-#overide base image entrypoint
-ENTRYPOINT []
-CMD ["/run.sh"]
+ENTRYPOINT ["/run.sh"]
