--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     container_name: jepsen-control
     hostname: control
     build: ./control
+    volumes:
+    - /tmp:/tmp
     env_file: ./secret/control.env
     privileged: true
     links:
